# Telegram-channel-API

./: .dockerignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml
src/: error.rs  handlers.rs  main.rs  parser.rs  schemas.rs
